# airchainpay

./: .gitignore  AirChainPay_Whitepaper.md  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  TODO.md  TOKEN_DEPLOYMENT_GUIDE.md  deployment.sh  eas.build.sh  setup-ducomentation.sh  test-relay-connection.js  test-wallet-relay.js  test.sh
airchainpay-relay-rust/airchainpay-relay/: Cargo.toml  DEPLOYMENT_SCRIPTS.md  Dockerfile  README.md  SECURITY_MIDDLEWARE.md  TODO.md  VALIDATION_BENEFITS.md  build.rs  env.example.sh  test_deployment_scripts.sh  test_sanitization.rs  test_security_middleware.rs
airchainpay-relay-rust/airchainpay-relay/scripts/: createkeys.sh  deploy_to_test.sh
airchainpay-relay-rust/airchainpay-relay/src/: auth.rs  blockchain.rs  config.rs  error.rs  lib.rs  logger.rs  main.rs  scheduler.rs  security.rs  storage.rs
airchainpay-relay-rust/airchainpay-relay/src/abi/: AirChainPay.json
airchainpay-relay-rust/airchainpay-relay/src/api/: mod.rs  swagger.rs
airchainpay-relay-rust/airchainpay-relay/src/api/handlers/: mod.rs  transaction.rs
airchainpay-relay-rust/airchainpay-relay/src/app/: transaction_service.rs
airchainpay-relay-rust/airchainpay-relay/src/ble/: manager.rs  mod.rs
airchainpay-relay-rust/airchainpay-relay/src/domain/: mod.rs
airchainpay-relay-rust/airchainpay-relay/src/infrastructure/: config.rs
airchainpay-relay-rust/airchainpay-relay/src/infrastructure/blockchain/: ethereum.rs  manager.rs
airchainpay-relay-rust/airchainpay-relay/src/middleware/: critical_error_middleware.rs  error_handling.rs  input_validation.rs  ip_whitelist.rs  metrics.rs  mod.rs  rate_limiting.rs  security.rs
airchainpay-relay-rust/airchainpay-relay/src/monitoring/: mod.rs
airchainpay-relay-rust/airchainpay-relay/src/processors/: mod.rs  transaction_processor.rs
airchainpay-relay-rust/airchainpay-relay/src/scripts/: mod.rs
airchainpay-relay-rust/airchainpay-relay/src/tests/: mod.rs  test_protobuf_compression.rs
airchainpay-relay-rust/airchainpay-relay/src/utils/: animated_ascii.rs  audit.rs  backup.rs  blockchain.rs  cache.rs  cleanup.rs  critical_error_handler.rs  database.rs  error_handler.rs  mod.rs  payload_compressor.rs  prometheus.rs  protobuf_compressor.rs  sanitizer.rs
airchainpay-relay-rust/airchainpay-relay/src/validators/: mod.rs  transaction_validator.rs
airchainpay-relay-rust/airchainpay-relay/tests/: api_endpoints_test.rs  ble_manager_test.rs  blockchain_test.rs  cache_test.rs  critical_error_handling_test.rs  database_test.rs  logger_test.rs  metrics_test.rs  mod.rs  scheduler_test.rs  security_test.rs  test_ble.rs  transaction_processor_test.rs
airchainpay-solana/: Cargo.toml  README.md  deploy.sh
airchainpay-solana/deployments/: devnet.json
airchainpay-solana/src/: error.rs  instruction.rs  lib.rs  processor.rs  spl_token_support.rs  state.rs
airchainpay-wallet-core/: Cargo.toml  README.md  TODO.md  build.rs
airchainpay-wallet-core/airchainpay-wallet-core/: Cargo.toml  TODO.md  build.rs
airchainpay-wallet-core/airchainpay-wallet-core/src/: ffi.rs  lib.rs
airchainpay-wallet-core/airchainpay-wallet-core/src/core/: mod.rs
airchainpay-wallet-core/airchainpay-wallet-core/src/core/ble/: mod.rs
airchainpay-wallet-core/airchainpay-wallet-core/src/core/crypto/: mod.rs
airchainpay-wallet-core/airchainpay-wallet-core/src/core/storage/: mod.rs
airchainpay-wallet-core/airchainpay-wallet-core/src/core/transactions/: mod.rs
airchainpay-wallet-core/airchainpay-wallet-core/src/core/wallet/: mod.rs
airchainpay-wallet-core/airchainpay-wallet-core/src/domain/entities/: mod.rs  transaction.rs  wallet.rs
airchainpay-wallet-core/airchainpay-wallet-core/src/domain/repositories/: storage_repository.rs  transaction_repository.rs  wallet_repository.rs
airchainpay-wallet-core/airchainpay-wallet-core/src/infrastructure/platform/: mod.rs
airchainpay-wallet-core/airchainpay-wallet-core/src/shared/: error.rs  types.rs  utils.rs
airchainpay-wallet-core/airchainpay-wallet-core/src/shared/constants/: constants.rs
airchainpay-wallet-core/src/: ffi.rs  lib.rs
airchainpay-wallet-core/src/application/use_cases/: wallet_management.rs
airchainpay-wallet-core/src/core/: mod.rs
airchainpay-wallet-core/src/core/ble/: mod.rs
airchainpay-wallet-core/src/core/crypto/: README.md  encryption.rs  hashing.rs  keys.rs  mod.rs  password.rs  signatures.rs
airchainpay-wallet-core/src/core/storage/: mod.rs
airchainpay-wallet-core/src/core/transactions/: mod.rs
airchainpay-wallet-core/src/core/wallet/: mod.rs
airchainpay-wallet-core/src/domain/: mod.rs  services.rs
airchainpay-wallet-core/src/domain/entities/: mod.rs  transaction.rs  wallet.rs
airchainpay-wallet-core/src/domain/repositories/: mod.rs  transaction_repository.rs  wallet_repository.rs
airchainpay-wallet-core/src/infrastructure/: mod.rs
airchainpay-wallet-core/src/infrastructure/platform/: mod.rs
airchainpay-wallet-core/src/shared/: constants.rs  error.rs  types.rs  utils.rs
airchainpay-wallet-core/src/shared/constants/: constants.rs
airchainpay-wallet-core/src/shared/ffi/: mod.rs
airchainpay-wallet-core/src/shared/types/: types.rs
airchainpay-wallet-core/src/shared/utils/: utils.rs
(+274 files in other folders)
