[package]
name = "airchainpay-solana"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.3.0"
solana-system-interface = "1.0.0"
solana-sdk-ids = "2.2.1"
borsh = "1.5.7"
borsh-derive = "1.5.7"
thiserror = "2.0.12"

[dev-dependencies]
solana-program-test = "2.3.0"
solana-sdk = "2.3.0"
tokio = { version = "1.46.0", features = ["macros"] }

[features]
no-entrypoint = []
test-sbf = []
custom-heap = []
custom-panic = [] 