[package]
name = "airchainpay-wallet-core"
version = "0.1.0"
edition = "2021"
authors = ["AirChainPay Team"]
description = "Enterprise-grade secure wallet core for AirChainPay - handles all cryptographic operations and sensitive data management"
license = "MIT"
repository = "https://github.com/airchainpay/wallet-core"
keywords = ["wallet", "cryptocurrency", "blockchain", "security", "crypto"]
categories = ["cryptography", "blockchain", "security"]
readme = "README.md"

[lib]
name = "airchainpay_wallet_core"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# Cryptographic libraries - Updated to latest versions
secp256k1 = { version = "0.31.1", features = ["rand"] }
sha2 = "0.10.9"
sha3 = "0.10.8"
aes = "0.8.4"
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
argon2 = "0.5.3"
pbkdf2 = "0.12.2"
hmac = "0.12.1"
rand = "0.9.2"
rand_core = "0.9.3"
ripemd = "0.1.3"
generic-array = "1.2.0"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
bincode = "2.0.1"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# Logging
log = "0.4.27"
env_logger = "0.11.8"

# Async runtime
tokio = { version = "1.46.1", features = ["full"] }
async-trait = "0.1.88"

# Memory safety
zeroize = "1.8.1"

# FFI support
libc = "0.2.174"

# Utilities
hex = "0.4.3"
base64 = "0.22.1"
bs58 = "0.5.1"
chrono = { version = "0.4.41", features = ["serde"] }
lazy_static = "1.5.0"
uuid = { version = "1.17.0", features = ["v4"] }

# Metrics and monitoring
prometheus = "0.14.0"
metrics = "0.24.2"

# Configuration
config = "0.15.13"
dotenv = "0.15.0"

# Time handling
time = "0.3.41"

# Compression
flate2 = "1.1.2"
bip39 = "2.2.0"
bip32 = "0.5.3"
rlp = "0.6.1"

[dev-dependencies]
criterion = "0.6.0"
proptest = "1.7.0"
arbitrary = "1.3.2"
tokio-test = "0.4.4"
mockall = "0.13.1"
tempfile = "3.20.0"

[features]
default = ["std", "ffi"]
std = []
no_std = []
ffi = []
wasm = []
hardware_wallet = []
multi_sig = []
advanced_ble = []
metrics = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.test]
opt-level = 1
debug = true

[profile.bench]
opt-level = 3
debug = false

# Build scripts
[build-dependencies]
vergen = "9.0.6"

# Documentation
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# CI/CD
[package.metadata.ci]
rust-version = "1.70"
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "aarch64-apple-darwin"] 
