[package]
name = "airchainpay-relay"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "generate_secrets"
path = "src/bin/generate_secrets.rs"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.1"
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4"] }
hex = "0.4.3"
sha2 = "0.10.9"
rand = "0.9.1"
flate2 = "1.1.2"
tar = "0.4.44"
reqwest = { version = "0.12.22", features = ["json"] }
ethers = { version = "2.0.14", features = ["full"] }
utoipa = { version = "5.4.0", features = ["actix-web"] }
utoipa-swagger-ui = "9.0.2"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
base64 = "0.21.0"
# Protobuf and CBOR dependencies
prost = "0.13.0"
prost-types = "0.13.0"
bytes = "1.7.0"
cbor = "0.2.0"
cbor4ii = "0.3.0"
lz4 = "1.25.0"
# Input validation and sanitization dependencies
regex = "1.10.0"
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.12.0"

[dev-dependencies]
tokio-test = "0.4.4"